Edit snmpController